--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
+<!DOCTYPE html>
+<html lang="el">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Πακέτο 2: Κριτική αποτίμηση του CALL</title>
+    <style>
+        body {font-family: 'Comfortaa', sans-serif; background-color: black; color: #fff; text-align: center; margin: 0; padding: 0;}
+        h1 {background-color: black; color: gold; padding: 20px; font-size: 25px;}
+        .creator, .director {background-color: black; color: gold; padding: 10px; font-size: 18px;}
+        .emojis {font-size: 30px; margin-top: 20px;}
+        .score-box {position: absolute; top: 20px; right: 20px; font-size: 20px; font-weight: bold;}
+        .question-container {margin: 30px; max-width: 800px; margin: auto; text-align: left;}
+        .question {margin: 15px 0; padding: 15px; font-size: 120%; background-color: #0b3d91; color: gold; border-radius: 10px; font-weight: bold; text-shadow: 1px 1px 0 rgba(0,0,0,0.8), -1px -1px 0 rgba(255,255,255,0.2);}
+        .question-number {text-decoration: underline; display: block; margin-bottom: 5px;}
+        .answer {font-size: 18px; margin: 5px 0; padding: 10px; border-radius: 5px; cursor: pointer; background-color: #777; color: white; border: none; width: 100%;}
+        .answer:hover {background-color: #999;}
+        .correct {background-color: green !important;}
+        .incorrect {background-color: red !important;}
+        .final-score {font-size: 24px; color: gold; margin-top: 20px;}
+    </style>
+</head>
+<body>
+    <div class="creator">Δημιουργία/Επιμέλεια: Παναγιώτης Δόμβρος (CC BY-NC)</div>
+    <div class="director">Εκπαιδευτικός Αγγλικών - Θεατρολόγος</div>
+    <div class="director">Επιμορφωτής Τ.Π.Ε</div>
+    <div class="director">Διευθυντής 1ου Γυμνασίου Πυλαίας</div>
+    <h1>Πακέτο 2: Κριτική αποτίμηση του CALL</h1>
+    <div class="emojis">💻 📚 🎓 🌐</div>
+    <div class="score-box">Σκορ: <span id="score">0</span> / 100</div>
+    <div class="question-container" id="question-container"></div>
+    <audio id="successAudio" src="success-sound.mp3"></audio>
+    <audio id="failAudio" src="fail-sound.mp3"></audio>
+    <script>
+        const questions = [
+            {q:'Τι σημαίνει το ακρώνυμο CALL;', a:['α) Computer-Aided Language Learning','β) Computer Assisted Language Learning','γ) Computer-Annotated Language Learning'], c:1},
+            {q:'Ποια φάση του CALL εστιάζει αποκλειστικά σε drill & practice;', a:['α) Συμπεριφοριστική','β) Επικοινωνιακή','γ) Ενοποιημένη'], c:0},
+            {q:'Ποιος θεωρητικός είναι συνδεδεμένος με το συμπεριφοριστικό μοντέλο;', a:['α) Chomsky','β) Skinner','γ) Warschauer'], c:1},
+            {q:'Στο επικοινωνιακό μοντέλο, ποιος ρόλος ΔΕΝ αναφέρεται για τον υπολογιστή;', a:['α) Tutor','β) Stimulus','γ) Administrator'], c:2},
+            {q:'Ποιος όρος ΔΕΝ ανήκει στην πρώτη φάση του CALL;', a:['α) CAI','β) CMC','γ) CBI'], c:1},
+            {q:'Ποια φάση του CALL εισάγει έντονα το Διαδίκτυο και CMC;', a:['α) Συμπεριφοριστική','β) Επικοινωνιακή','γ) Ενοποιημένη'], c:2},
+            {q:'Τι χαρακτηρίζει τα «κλειστά περιβάλλοντα»;', a:['α) Drill & practice','β) Επεξεργασία κειμένου','γ) Ηλεκτρονικά λεξικά'], c:0},
+            {q:'Ποια κατηγορία δεν ανήκει στα περιβάλλοντα ευρείας χρήσης;', a:['α) Λογισμικά παρουσίασης','β) Κατευθυντικά λογισμικά tutor','γ) Διαδικτυακοί ιστότοποι'], c:1},
+            {q:'Τι προσφέρει ένα authoring program;', a:['α) Προσχεδιασμένο, μη τροποποιήσιμο περιεχόμενο','β) Τη δυνατότητα προσθήκης δικού του περιεχομένου από τον εκπαιδευτικό','γ) Αυτόματη διόρθωση ορθογραφίας'], c:1},
+            {q:'Ποιο εργαλείο ανήκει στα concordancers;', a:['α) PowerPoint','β) Sketch Engine','γ) Moodle'], c:1},
+            {q:'Τι είδους δραστηριότητες υποστηρίζει το μοντέλο «computer as stimulus»;', a:['α) Συντακτικές ασκήσεις','β) Προσομοιώσεις','γ) Επεξεργασία λέξεων σε Word'], c:1},
+            {q:'Ποιος όρος περιγράφει την πολυτροπικότητα κειμένων;', a:['α) Electronic literacy','β) Drill & practice','γ) E-learning'], c:0},
+            {q:'Σε ποια φάση του CALL εμφανίζεται ο όρος «electronic literacy»;', a:['α) Συμπεριφοριστική','β) Επικοινωνιακή','γ) Ενοποιημένη'], c:2},
+            {q:'Ποιο από τα παρακάτω είναι παράδειγμα dedicated program;', a:['α) Storyboard','β) Wida Suite','γ) Pronunciation Tutor'], c:2},
+            {q:'Ποια θεωρία μάθησης συνδέεται με τα tutoring συστήματα (Gagné);', a:['α) Συμπεριφορισμός','β) Γνωστική ψυχολογία','γ) Κοινωνικο-γνωστική'], c:1},
+            {q:'Ποιο είναι πλεονέκτημα των drill & practice λογισμικών;', a:['α) Αυθεντικό συγκείμενο','β) Άπειρες επαναλήψεις','γ) Συνεργατικές δραστηριότητες'], c:1},
+            {q:'Ποιο εργαλείο ΔΕΝ βρίσκεται στα ανοικτά περιβάλλοντα;', a:['α) Ηλεκτρονικά σώματα κειμένων','β) Λεξικά CD-ROM','γ) Concordancers'], c:1},
+            {q:'Τι σημαίνει CMC;', a:['α) Computer-Managed Course','β) Computer-Mediated Communication','γ) Computer-Multimedia Classroom'], c:1},
+            {q:'Ποια δραστηριότητα ανήκει στα περιβάλλοντα ευρείας χρήσης;', a:['α) Gap-fill ασκήσεις','β) Word-processing','γ) Dedicated quizzes'], c:1},
+            {q:'Ποιο από τα παρακάτω είναι παράδειγμα γραμματισμού πολυμέσων;', a:['α) Drill-and-practice','β) CD-ROM με ήχο και βίντεο','γ) True/false quizzes'], c:1},
+            {q:'Τα webquests ανήκουν σε ποια κατηγορία;', a:['α) Κλειστά περιβάλλοντα','β) Διαδικτυακές πηγές','γ) Tutor-based systems'], c:1},
+            {q:'Ποιο εργαλείο επιτρέπει στον εκπαιδευτικό να δημιουργήσει δικά του σενάρια;', a:['α) Dedicated program','β) Authoring program','γ) Presentation software'], c:1},
+            {q:'Ποια φάση ενσωματώνει task-based activities;', a:['α) Επικοινωνιακή','β) Συμπεριφοριστική','γ) Κατηγοριοποίηση'], c:0},
+            {q:'Τι υποδεικνύει η έννοια «integrative CALL»;', a:['α) Μόνο drills','β) Ενοποίηση δεξιοτήτων με πολυμέσα','γ) Αποκλειστικά web-based quizzes'], c:1},
+            {q:'Ποια τεχνολογία άλλαξε τη συμπεριφορά των μαθητών τη δεκαετία ’90;', a:['α) MAinframe computers','β) Μικροϋπολογιστής + Διαδίκτυο','γ) CD-ROM μόνο'], c:1},
+            {q:'Ποιος όρος συνδέεται με την ανάπτυξη συνεργατικής μάθησης;', a:['α) Drill & practice','β) Concordancing','γ) CMC'], c:2},
+            {q:'Ποια από τις παρακάτω δεν είναι πηγή αλληλεπίδρασης στο web-based CALL;', a:['α) MOOs','β) Email','γ) Dedicated quizzes'], c:2},
+            {q:'Τι είναι τα MOOCs;', a:['α) Drill systems','β) Δωρεάν διαδικτυακά μαθήματα','γ) Συντακτικά εργαλεία'], c:1},
+            {q:'Ποια κατηγορία ενθαρρύνει τη διερευνητική μάθηση χωρίς έτοιμες απαντήσεις;', a:['α) Κλειστά περιβάλλοντα','β) Ανοιχτά περιβάλλοντα','γ) Drill & practice'], c:1},
+            {q:'Τι βελτιώνει ο ηλεκτρονικός γραμματισμός;', a:['α) Μόνο την ακρίβεια','β) Συνδυασμό γραφής, ανάγνωσης, ακρόασης, ομιλίας','γ) Μόνο τη μετάφραση'], c:1},
+            {q:'Ποια εφαρμογή ΔΕΝ είναι corpus tool;', a:['α) Sketch Engine','β) AntConc','γ) PowerPoint'], c:2},
+            {q:'Τι προσφέρει ένα ηλεκτρονικό σώμα κειμένων (corpus);', a:['α) Στατικό κείμενο χωρίς αναζήτηση','β) Αναζήτηση συμφραζομένων','γ) Μόνο μετάφραση'], c:1},
+            {q:'Σε ποια κατηγορία ανήκει το WordReference;', a:['α) Επεξεργασία κειμένου','β) Διαδικτυακές πηγές / λεξικά','γ) Dedicated tutor'], c:1},
+            {q:'Ποια ενέργεια ΔΕΝ απαιτείται για επιτυχημένο web-based CALL;', a:['α) Σαφείς εκπαιδευτικούς στόχους','β) Χρονοδιάγραμμα δραστηριοτήτων','γ) Drill-and-practice μόνο'], c:2},
+            {q:'Ποιο εργαλείο χρησιμοποιείται για τη δημιουργία παρουσιάσεων;', a:['α) Prezi','β) Sketch Engine','γ) AntConc'], c:0},
+            {q:'Τι περιλαμβάνει το «Expertise-as-tutor» μοντέλο;', a:['α) Ασκήσεις συμπλήρωσης κενών','β) Λογισμικά καθοδήγησης (authoring/dedicated)','γ) Επιλογή λογοτεχνικών κειμένων'], c:1},
+            {q:'Ποια μέθοδος ΔΕΝ είναι συμπεριφοριστική;', a:['α) Drill & practice','β) Audiolingual','γ) Task-based'], c:2},
+            {q:'Τι σηματοδοτεί η μετάβαση από CAI σε CMC;', a:['α) Περιορισμό στη γραμματική','β) Προσανατολισμό στην επικοινωνία','γ) Αποκλειστική χρήση CD-ROM'], c:1},
+            {q:'Ποιο λογισμικό πρωτοχρησιμοποίησε remote screen sharing;', a:['α) PLATO','β) Pronunciation Tutor','γ) Wida Suite'], c:0},
+            {q:'Ποιο είναι βασικό μειονέκτημα των κλειστών drill & practice;', a:['α) Έλλειψη ανατροφοδότησης','β) Μη αυθεντικό υλικό','γ) Πολλαπλές επιλογές'], c:1},
+            {q:'Ποιο από τα παρακάτω είναι πλεονέκτημα του computer as tool;', a:['α) Αυτόματη αξιολόγηση','β) Έμφαση στη δημιουργικότητα','γ) Διαχείριση πληροφοριών και δημοσίευση'], c:2},
+            {q:'Τι τύπο ανατροφοδότησης παρέχει το tutoring;', a:['α) Μόνο αρνητική','β) Άμεση, έγκυρη','γ) Καθόλου'], c:1},
+            {q:'Ποιος όρος συνδέεται με το δασκαλοκεντρικό μοντέλο;', a:['α) Drill & practice','β) Task-based learning','γ) Electronic literacy'], c:0},
+            {q:'Τι χαρακτηρίζει τα multimedia computers της ενοποιημένης φάσης;', a:['α) Μόνο ήχο','β) Ήχο + βίντεο + υπερκείμενα','γ) Μόνο κείμενο'], c:1},
+            {q:'Σε ποια φάση παρατηρείται plug-and-play χρήση CD-ROM;', a:['α) Συμπεριφοριστική','β) Επικοινωνιακή','γ) Ενοποιημένη'], c:2},
+            {q:'Ποια δραστηριότητα βοηθά στην κριτική αλίευση πληροφοριών;', a:['α) Αποκλεισμός internet','β) Συνεργατικές online έρευνες','γ) Drill & practice'], c:1},
+            {q:'Ποιο εργαλείο επιτρέπει συνεχή διαχείριση μαθητή;', a:['α) Content-management & assessment tool','β) PowerPoint','γ) Concordancer'], c:0},
+            {q:'Τι σχήμα χρησιμοποιείται για σύγκριση μοντέλων CALL;', a:['α) Πίνακας','β) Ψηφιακό σώμα κειμένου','γ) Quiz'], c:0},
+            {q:'Τι υποστηρίζει ο Warschauer (1996) στην κατηγοριοποίηση του CALL;', a:['α) Μόνο Behaviouristic vs Communicative','β) Τρεις φάσεις: Behaviouristic, Communicative, Integrative','γ) Μόνο Drill vs Task-based'], c:1},
+            {q:'Ποια δεξιότητα ενισχύεται κυρίως απο τα open corpora;', a:['α) Γραμματική ακριβείας','β) Διερευνητική μάθηση και χρήση αυθεντικών δεδομένων','γ) Μόνο ακρόαση'], c:1}
+        ];
+        let score=0, idx=0;
+        const container=document.getElementById('question-container');
+        function showQuestion(){
+            if(idx>=questions.length){
+                container.innerHTML=`<div class="final-score">Τέλος! Σκορ: ${score} / ${questions.length*2}</div>`;
+                return;
+            }
+            const {q,a} = questions[idx];
+            let html=`<div class="question"><span class="question-number">Ερώτηση ${idx+1}:</span>${q}</div>`;
+            a.forEach((opt,i)=>{ html+=`<button class="answer" data-index="${i}">${opt}</button>`; });
+            container.innerHTML=html;
+            document.querySelectorAll('.answer').forEach(btn=>btn.addEventListener('click',onAnswer));
+        }
+        function onAnswer(e){
+            const selected=+e.currentTarget.dataset.index;
+            const {c}=questions[idx];
+            const audio=selected===c?document.getElementById('successAudio'):document.getElementById('failAudio');
+            audio.play();
+            if(selected===c) score+=2;
+            document.getElementById('score').textContent=score;
+            document.querySelectorAll('.answer').forEach((btn,i)=>{ btn.disabled=true; if(i===c) btn.classList.add('correct'); else if(i===selected) btn.classList.add('incorrect'); });
+            idx++;
+            setTimeout(showQuestion,800);
+        }
+        showQuestion();
+    </script>
+</body>
+</html>
 
